Everything is wiscotrail project now

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="edu.wisc.ece.project454">
+    package="edu.wisc.ece.wiscotrail">
 
 
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
+        android:label="WiscoTrail"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
