--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,45 +10,76 @@
         android:theme="@style/AppTheme">
         <activity
             android:name=".SplashActivity"
-            android:theme="@style/SplashTheme">
+            android:theme="@style/SplashTheme"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".MainActivity" />
-        <activity android:name=".StartTrail" />
-        <activity android:name=".TrailInfo" />
-        <activity android:name=".ToggleSound" />
-        <activity android:name=".ManagementOptions" />
+        <activity android:name=".MainActivity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".StartTrail"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".TrailInfo"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".ToggleSound"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".ManagementOptions"
+            android:screenOrientation="portrait"/>
         <activity android:name=".PickLeader"
-            android:windowSoftInputMode="adjustResize"/>
-        <activity android:name=".MainScreen" />
+            android:windowSoftInputMode="adjustResize"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".MainScreen"
+            android:screenOrientation="portrait"/>
         <activity android:name=".PickParty"
-            android:windowSoftInputMode="adjustResize"/>
-        <activity android:name=".FarmNFleet" />
-        <activity android:name=".DepartureMonth" />
-        <activity android:name=".Shop" />
-        <activity android:name=".Minneapolis" />
-        <activity android:name=".MississippiRiver" />
-        <activity android:name=".EauClaire" />
-        <activity android:name=".DevilsLake" />
-        <activity android:name=".Madison" />
-        <activity android:name=".WisconsinRiver" />
-        <activity android:name=".NewGlarus" />
-        <activity android:name=".RockRiver" />
-        <activity android:name=".Milwaukee" />
-        <activity android:name=".Sheboygan" />
-        <activity android:name=".GreenBay" />
-        <activity android:name=".TravelAnimation" />
-        <activity android:name=".Hunt" />
-        <activity android:name=".TravelSettings" />
-        <activity android:name=".Trade" />
-        <activity android:name=".EndGame" />
-        <activity android:name=".TrailInfo1" />
-        <activity android:name=".ViewSupplies" />
-        <activity android:name=".PartyHealth"></activity>
+            android:windowSoftInputMode="adjustResize"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".FarmNFleet"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".DepartureMonth"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".Shop"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".Minneapolis"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".MississippiRiver"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".EauClaire"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".DevilsLake"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".Madison"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".WisconsinRiver"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".NewGlarus"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".RockRiver"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".Milwaukee"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".Sheboygan"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".GreenBay"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".TravelAnimation"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".Hunt"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".TravelSettings"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".Trade"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".EndGame"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".TrailInfo1"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".ViewSupplies"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".PartyHealth"
+            android:screenOrientation="portrait"></activity>
     </application>
 
 </manifest>
